--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -44,8 +44,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   justify-content: center;
   align-items: stretch;
   height: 100%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding: 5%;
+
+
 }
 
 .main-container-column{
